# BB_BT_Codes

./: .gitignore  BB_multiprocess_integration.py  BB_parse_and_plot.py  BB_serial_integration.py  BB_sinter_integration.py  BB_tools.py  BPOSD simulation.ipynb  BPOSD_estimate_distance.py  BPOSD_singleshot.py  BPOSD_threshold.py  MWPM_threshold.py  Makefile  README.md  analyze_bb_bt_correspondence.py  bb_common.py  bivariate_bicycle_codes.py  bivariate_tricycle_codes.py  bt_code_analysis.py  bt_singleshot_decoder.py  circuit_utils.py  cnot_scheduling.py  debug.txt  direct_cnot_scheduling.py  distance_estimator.py  edge_coloring.py  file_io_utils.py  minimal_ann_matrix.py  mypy.ini  pyproject.toml  qec_simulation_core.py  quantum_circuit_builder.py  results_parser_plotter.py  run.sh  run_BB_code_BPOSD.py  search_bt_c_poly.py  simulation_common.py  simulation_generic.py  simulation_multiprocess.py  simulation_serial.py  sinter_example.py  (+4 more)
config_examples/: bb_from_bt_multi.json  bb_from_bt_multi_small.json  bb_small_test.json  bb_threshold_study.json  bt_small_test copy.json  bt_small_test.json  construct_bt_from_bb.json  construct_bt_from_bb_small.json  construct_bt_from_bb_small_no_metacheck.json  construct_bt_from_bb_small_with_metacheck.json  multi_experiments.json  test_bt_comparison.json  test_bt_integration.json  tt_large_test.json  tt_small_test.json
deprecated_code/: simulation_serial.py
test/: test_bb_ler_vs_rounds.py  test_bb_matrix.py  test_bt_ler_vs_rounds.py  test_bt_matrix.py  test_bt_singleshot_propagation.py  test_surface_code_framework_ler_vs_rounds.py  (+4 more)
