[project]
name = "bb-bt-codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bposd",
    "ldpc",
    "matplotlib",
    "mypy",
    "networkx",
    "numpy",
    "pymatching>=2.3.0",
    "pytest",
    "scipy",
    "stim",
    "sympy>=1.14.0",
]
